--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <!-- logo icon -->
         <img class="" src="./capstone_colmar_assets/images/ic-logo.svg" alt="">
         <!-- logo font -->
-        <p class="font-weight-light" style="color:#b7b7b7;"><span class="font-weight-bold" style="color: #6d6d6d;">COLMAR</span>ACADEMY</p>
+        <p class="font-weight-light" style="color:#b7b7b7; font-size: 20px;"><span class="font-weight-bold" style="color: #6d6d6d;">COLMAR</span>ACADEMY</p>
       </a>
 
       <!-- nav menu -->
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <!-- nav-item 1: On campus -->
-          <li class="nav-item active">
+          <li class="nav-item">
             <img class="nav-icon ml-auto mt-1" src="./capstone_colmar_assets/images/ic-on-campus.svg" alt="Sign in">
             <a class="nav-link" href="#">On campus <span class="sr-only">(current)</span></a>
           </li>
@@ -47,7 +47,7 @@
           <!-- nav-item 4: Sign in -->
           <li class="nav-item">
             <img class="nav-icon ml-auto mt-1" src="./capstone_colmar_assets/images/ic-login.svg" alt="Sign in">
-            <a class="nav-link disabled" href="#">Sign in</a>
+            <a class="nav-link" href="#">Sign in</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
     <div class="">
       <!-- Left column: Banner -->
       <div class="row" style="padding: 0px; margin-right: 0px">
-        <div style="width: 60%; overflow: hidden; padding: 32px 12px 32px 24px;">
+        <div class="col-lg-60" style="overflow: hidden; padding: 32px 12px 32px 24px;">
           <!-- Change image by "src" attribute -->
           <img class="w-100" src="./capstone_colmar_assets/images/banner.jpg" alt="COLMARACADEMY" style="object-fit: cover;">
         </div>
@@ -79,66 +79,71 @@
   </section>
   <!-- Section 1: End -->
 
-  <!-- Section 2: Information - Start -->
-  <section style="margin-right: 0px">  
-      <!-- Left column: Banner -->
-      <div class="row" style="padding: 0px">
-        <div style="width: 60%; overflow: hidden; padding: 32px 12px 16px 24px;">
-          <!-- Change image by "src" attribute -->
-          <img class="w-100" src="./capstone_colmar_assets/images/information-main.jpg" alt="COLMARACADEMY" style="object-fit: cover;">
-        </div>
-        <!-- Right column: Content -->
-        <div class="col border-left" style="padding: 32px 0px 16px 0px;">
-        <div class="row h-50 border-bottom" style="padding-left: 12px; padding-bottom: 8px;">
-          <div  style="overflow: hidden;  width: 35%;">
-            <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-orientation.jpg" alt="" style="object-fit: cover;">
-          </div>
-          <div class="col my-auto" style="padding-left: 16px;">
-            <h3>Orientation date</h3>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <a href="#">Read more</a>
-          </div>
-        </div>
-        <div class="row h-50" style="padding-left: 12px; padding-top: 8px;">
-          <div  style="overflow: hidden;  width: 35%;">
-            <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-campus.jpg" alt="" style="object-fit: cover;">
-          </div>
-          <div class="col my-auto" style="padding-left: 16px;">
-            <h3>Our Campus</h3>
-            <p>Find which campus is close by you</p>
-            <a href="#">Read more</a>
-          </div>
-        </div>
-        </div>
-        </div>
-      <!-- Left column: Banner -->
-      <div class="row" style="padding: 0px">
-        <div style="width: 60%; overflow: hidden; padding: 16px 12px 32px 24px;">
-          <!-- Change image by "src" attribute -->
-          <h2 class="font-weight-bold">It doesn't hurt to keep practicing</h2>
-          <p style="margin-top: 24px">"Curabitur vitae libero in ipusm porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula" 
-            <br>
-            <br>
-            <span class="font-weight-bold">Emanual, Sr Strategist at Hiring.com</span>
-          </p>
-        </div>
-        <!-- Right column: Content -->
-        <div class="col border-left" style="padding: 0px 0px 16px 0px;">
-        <div class="row h-100" style=" padding:16px 0px 16px 12px; background-color: #e5e5e5;">
-          <div  style="overflow: hidden;  width: 35%;">
-            <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-guest-lecture.jpg" alt="" style="object-fit: cover;">
-          </div>
-          <div class="col my-auto" style="padding-left: 16px;">
-            <h3>Our guest lecture</h3>
-            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <a href="#">Read more</a>
-          </div>
-        </div>
-        </div>
-          </div>
 
-  </section>
-  <!-- Section 2: Information - End -->
+<!-- <div class="row">
+  <div class="col-8 border"></div>
+  <div class="col-4 border"></div>
+</div> -->
+
+
+
+
+
+
+
+<!-- Section 2: Information - Start -->
+<section style="margin-right: 0px">  
+    <!-- Left column: Banner -->
+    <div class="row" style="padding: 0px">
+      <div class="col-lg-60" style="padding: 16px 12px 16px 24px;">
+        <div class="row left-row" style="overflow: hidden; padding: 16px 0px 16px 0px">
+          <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-main.jpg" alt="COLMARACADEMY" style="object-fit: cover;">
+        </div>
+        <div class="row">
+          
+        <h2 class="font-weight-bold">It doesn't hurt to keep practicing</h2>
+        <p style="margin-top: 24px">"Curabitur vitae libero in ipusm porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula" 
+          <br>
+          <br>
+          <span class="font-weight-bold">Emanual, Sr Strategist at Hiring.com</span>
+        </p>
+        </div>
+
+      </div>
+      <!-- Right column: Content -->
+      <div class="col border-left" style="padding: 16px 0px 16px 0px;">
+      <div class="row right-row border-bottom" style="padding: 16px 0px 16px 12px ">
+        <div  style="overflow: hidden;  width: 35%;">
+          <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-orientation.jpg" alt="" style="object-fit: cover;">
+        </div>
+        <div class="col my-auto" style="padding-left: 16px;">
+          <h3>Orientation date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+      <div class="row right-row" style="padding: 16px 0px 16px 12px ">
+        <div  style="overflow: hidden;  width: 35%;">
+          <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-campus.jpg" alt="" style="object-fit: cover;">
+        </div>
+        <div class="col my-auto" style="padding-left: 16px;">
+          <h3>Our Campus</h3>
+          <p>Find which campus is close by you</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+      <div class="row right-row" style="padding:16px 0px 16px 12px; background-color: #e5e5e5;">
+        <div  style="overflow: hidden;  width: 35%;">
+          <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-guest-lecture.jpg" alt="" style="object-fit: cover;">
+        </div>
+        <div class="col my-auto" style="padding-left: 16px;">
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+      </div>
+      </div>
 
   <!-- Section 3: Courses - Start -->
   <section>
@@ -153,7 +158,7 @@
         <!-- 1st Row -->
         <div class="row" style="margin-top: 32px; padding: 0px 56px">
           <!-- Card 1: Software engineering -->
-          <div class="col-lg-4" style="padding:0px 16px">
+          <div class="col-md-4" style="padding:0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-software.jpg" alt="Card image cap">
               <div class="card-body">
@@ -168,7 +173,7 @@
             </div>
           </div>
           <!-- Card 2: Computer art -->
-          <div class="col-lg-4" style="padding: 0px 16px">
+          <div class="col-md-4" style="padding: 0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-computer-art.jpg" alt="Card image cap">
               <div class="card-body">
@@ -183,7 +188,7 @@
             </div>
           </div>
           <!-- Card 3: Design -->
-          <div class="col-lg-4" style="padding:0px 16px">
+          <div class="col-md-4" style="padding:0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-design.jpg" alt="Card image cap">
               <div class="card-body">
@@ -201,7 +206,7 @@
         <!-- 2nd Row -->
         <div class="row" style="margin-top: 32px;padding: 0px 56px">
           <!-- Card 4: Data -->
-          <div class="col-lg-4" style="padding:0px 16px">
+          <div class="col-md-4" style="padding:0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-data.jpg" alt="Card image cap">
               <div class="card-body">
@@ -216,7 +221,7 @@
             </div>
           </div>
           <!-- Card 5: Business -->
-          <div class="col-lg-4" style="padding: 0px 16px">
+          <div class="col-md-4" style="padding: 0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-business.jpg" alt="Card image cap">
               <div class="card-body">
@@ -231,7 +236,7 @@
             </div>
           </div>
           <!-- Card 6: Marketing -->
-          <div class="col-lg-4" style="padding:0px 16px">
+          <div class="col-md-4" style="padding:0px 16px">
             <div class="card w-100 h-100" >
               <img class="card-img-top" src="./capstone_colmar_assets/images/course-marketing.jpg" alt="Card image cap">
               <div class="card-body">
@@ -251,7 +256,7 @@
 
   <!-- Section 4: Thesis Exhibit - Start -->
   <section class="border-bottom">
-    <div class="container-fluid" style="padding: 32px 0px">
+    <div class="container-fluid" style="padding: 32px 0px 16px 0px">
       <!-- Section Title -->
       <div class="row">
         <div class="col text-center">
@@ -262,33 +267,38 @@
             <div class="row" style="padding: 0px">
               <div style="width: 60%; overflow: hidden; padding: 32px 12px 16px 24px;">
                 <!-- Change image by "src" attribute -->
-                <video width="100%" src="./capstone_colmar_assets/videos/thesis.mp4" autoplay="" muted="" loop="" role="presentation">
+                <video width="100%" height="100%" src="./capstone_colmar_assets/videos/thesis.mp4" autoplay="" muted="" loop="" role="presentation" style="object-fit: cover;">
                   Undable to display video
                 </video>
               </div>
               <!-- Right column: Content -->
-              <div class="col border-left" style="padding: 32px 0px 16px 0px;">
-              <div class="row h-50 border-bottom" style="padding-left: 12px; padding-bottom: 8px;">
+              <div class="col" style="padding: 16px 0px 16px 0px;">
+              <div class="row h-50 border-bottom" style="padding:16px 0px 0px 12px; padding-bottom: 8px; background-color: #e5e5e5;">
                 <div  style="overflow: hidden;  width: 35%;">
-                  <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-orientation.jpg" alt="" style="object-fit: cover;">
+                  <img class="w-100 h-100" src="./capstone_colmar_assets/images/thesis-fisma.jpg" alt="" style="object-fit: cover;">
                 </div>
                 <div class="col my-auto" style="padding-left: 16px;">
-                  <h3>Orientation date</h3>
-                  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                  <a href="#">Read more</a>
+                  <h3>Fisma: Design and Prototype</h3>
+                  <p>Designer showcase of new prototype product</p>
                 </div>
               </div>
               <div class="row h-50" style="padding-left: 12px; padding-top: 8px;">
                 <div  style="overflow: hidden;  width: 35%;">
-                  <img class="w-100 h-100" src="./capstone_colmar_assets/images/information-campus.jpg" alt="" style="object-fit: cover;">
+                  <img class="w-100 h-100" src="./capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="" style="object-fit: cover;">
                 </div>
                 <div class="col my-auto" style="padding-left: 16px;">
-                  <h3>Our Campus</h3>
-                  <p>Find which campus is close by you</p>
-                  <a href="#">Read more</a>
+                  <h3>Now and then</h3>
+                  <p>Research study about New York</p>
                 </div>
               </div>
               </div>
+              </div>
+              <div class="row">
+                <div style="width: 60%; overflow: hidden; padding: 16px 12px 0px 24px;">
+                  <h2 class="font-weight-bold">Reimagine urban</h2>
+                  <p style="margin-top: 24px">"Curabitur vitae libero in ipusm porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula" 
+                  </p>
+                </div>
               </div>
     </div>
   </section>
@@ -298,10 +308,10 @@
     <p style="display: inline;">© 2016 COLMAR ACADEMY. ALL RIGHTS RESERVED</p>
     <ul class="ml-auto" style="display: flex; flex-direction: row; list-style: none">
       <li class="nav-item ">
-        <a href="">Terms</a>
+        <a href="" style="color: inherit;">Terms</a>
       </li>
       <li class="nav-item ">
-        <a href="">Privacy</a>
+        <a href="" style="color: inherit;">Privacy</a>
       </li>
     </ul>
   </footer>
