--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Site Icon -->
+    <!-- Site Icon -->
     <link rel="icon" href="./capstone_colmar_assets/images/ic-logo.svg">
-    
+
     <!-- Stylesheets linking -->
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -25,6 +25,7 @@
     <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js" defer></script> -->
     <!-- Site title -->
     <title>Colaracademy</title>
+    
 </head>
 
 <body>
@@ -95,10 +96,9 @@
                                 <span></span> new everyday
                             </h1>
                             <!-- Text -->
-                            <h4 class="mb-0">
-                                Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit.</h4>
+                            <h4 class="mb-0">Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit.</h4>
                                 <!-- Start Button: to Section 3: courses anchor -->
-                                <button type="button" class="btn rounded-0" onClick="location.href='#courses'">Start here</button>
+                            <button type="button" class="btn rounded-0" onClick="location.href='#courses'">Start here</button>
                         </div>
                         <!-- End of Right column: Content -->
                     </div>
@@ -598,13 +598,25 @@
           })
 
         /* Section 3: Animation */
-        gsap.from('.card', {
-              scrollTrigger: '.card',
+        gsap.timeline({
+              scrollTrigger: {
+                  trigger:'.card',
+                  start: 'center bottom'
+              }
+          }).from('.card', {
+              opacity: 0,
               y: -50,
               opacity: 0,
               duration: 0.5,
               stagger: 0.1
           })
+        // gsap.from('.card', {
+        //       scrollTrigger: '.card',
+        //       y: -50,
+        //       opacity: 0,
+        //       duration: 0.5,
+        //       stagger: 0.1
+        //   })
 
         /* Animation: Section 4 */
         gsap.from('.s4-video', {
