--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </section>
         <!-- End of Section 2: Information -->
 
-        <!-- Section 3: Courses - Start -->
+        <!-- Start of Section 3: Courses -->
         <section id="courses" style="scroll-margin-top: 64px;">
             <div class="container-fluid" style="padding: 32px 0px;">
                 <!-- Section Title -->
@@ -434,9 +434,9 @@
 
 
         </section>
-        <!-- Section 3: Courses - End -->
+        <!-- End of Section 3: Courses -->
 
-        <!-- Section 4: Thesis Exhibit - Start -->
+        <!-- Start of Section 4: Thesis Exhibit -->
         <section class="border-bottom">
             <!-- prevent stretching beyond 1440px width -->
             <div class="container-1440px">
@@ -503,7 +503,7 @@
             </div>
             
         </section>
-        <!-- Section 4: Thesis Exhibit - End -->
+        <!--End of Section 4: Thesis Exhibit -->
     </main>
     <!-- End of Main -->
 
